fix: tagset tag spacing

--- a/packages/ibm-products-styles/src/components/PageHeader/_page-header.scss
+++ b/packages/ibm-products-styles/src/components/PageHeader/_page-header.scss
@@ -980,6 +980,10 @@ $duration: 1000ms;
     @include breakpoint(lg) {
       transform: translateX($spacing-08);
     }
+
+    .#{$carbon-prefix}--tag {
+      margin-inline-end: $spacing-02;
+    }
   }
 
   .#{$block-class}--tag-overflow-popover__hidden {
