--- a/packages/ibm-products-styles/src/components/TagSet/_tag-set.scss
+++ b/packages/ibm-products-styles/src/components/TagSet/_tag-set.scss
@@ -13,41 +13,43 @@
 @use '../../global/styles/project-settings' as *;
 @use '../../global/styles/mixins' as *;
 
-$_block-class: #{$pkg-prefix}--tag-set;
-$block-class-overflow: #{$_block-class}-overflow;
-$block-class-modal: #{$_block-class}-modal;
+$block-class: #{$pkg-prefix}--tag-set;
+$block-class-overflow: #{$block-class}-overflow;
+$block-class-modal: #{$block-class}-modal;
 
-@include block-wrap($_block-class) {
-  &.#{$_block-class} {
+@include block-wrap($block-class) {
+  &.#{$block-class} {
     display: block;
     inline-size: 100%;
   }
 
-  .#{$_block-class}__space {
+  .#{$block-class}__space {
     position: relative;
     display: block;
     inline-size: 100%;
     white-space: nowrap;
   }
 
-  .#{$_block-class}__space--align-end {
+  .#{$block-class}__space--align-end {
     text-align: end;
   }
 
-  .#{$_block-class}__space--align-center {
+  .#{$block-class}__space--align-center {
     text-align: center;
   }
 
-  .#{$_block-class}__tag-container {
+  .#{$block-class}__tag-container {
     display: inline-flex; // needed to register a width
+    // Spacing between tags.
+    gap: $spacing-02;
     white-space: nowrap;
   }
 
-  .#{$_block-class}__tag-container--multiline {
+  .#{$block-class}__tag-container--multiline {
     flex-wrap: wrap;
   }
 
-  .#{$_block-class}__tag-container--hidden {
+  .#{$block-class}__tag-container--hidden {
     // This tag container is used to measure the width of all displayable tags
     @include measuring-container;
   }
@@ -93,6 +95,13 @@ $block-class-modal: #{$_block-class}-modal;
     margin-inline-end: $spacing-05;
     padding-inline-end: 0;
   }
+
+  .#{$block-class-modal}__body {
+    .#{$carbon-prefix}--tag {
+      margin-block-end: $spacing-02;
+      margin-inline-end: $spacing-02;
+    }
+  }
 }
 
 @include block-wrap('#{$block-class-overflow}__tagset-popover') {
@@ -111,11 +120,12 @@ $block-class-modal: #{$_block-class}-modal;
   .#{$block-class-overflow}__tag-list {
     display: flex;
     flex-direction: column;
+    gap: $spacing-02;
   }
 
   .#{$block-class-overflow}__show-all-tags-link {
     color: $link-inverse;
-    margin-block-start: $spacing-03;
+    margin-block-start: $spacing-04;
 
     &:hover {
       color: $link-inverse-hover;
